Remove manual.html from repo

--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,4 @@ preview/hurmet.js
 preview/prosemirror.js
 site/hurmet.min.js
 site/prosemirror.min.js
-site/docs/en/manual/html
+site/docs/en/manual.html
