--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "math": "rollup --config utils/rollup.hurmet.config.js",
     "docs": "node utils/buildDocs.js",
     "pm": "rollup --config utils/rollup.prosemirror.config.js && node utils/editPM.js",
-    "minify": "uglifyjs preview/prosemirror.js -o site/prosemirror.min.js -m && uglifyjs preview/hurmet.js -o site/hurmet.min.js -m",
+    "minify": "terser preview/prosemirror.js -o site/prosemirror.min.js -m && terser preview/hurmet.js -o site/hurmet.min.js -m",
     "build": "yarn pm && yarn math && yarn minify && yarn docs",
     "test": "yarn test:lint && node test/test.js",
     "test:lint": "eslint src",
