--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "prosemirror-state": "^1.3.2",
     "prosemirror-tables": "^1.0.0",
     "prosemirror-transform": "^1.2.3",
-    "prosemirror-view": "^1.14.2"
+    "prosemirror-view": "^1.14.2",
+    "terser": "^5.5.1"
   },
   "devDependencies": {
     "eslint": "^7.5.0",
