--- a/package.json
+++ b/package.json
@@ -32,15 +32,14 @@
     "prosemirror-state": "^1.3.2",
     "prosemirror-tables": "^1.0.0",
     "prosemirror-transform": "^1.2.3",
-    "prosemirror-view": "^1.14.2",
-    "terser": "^5.5.1"
+    "prosemirror-view": "^1.14.2"
   },
   "devDependencies": {
     "eslint": "^7.5.0",
     "rollup": "^1.13.0",
     "rollup-plugin-commonjs": "^10.0.0",
     "rollup-plugin-node-resolve": "^5.0.1",
-    "uglify-es": "^3.3.9"
+    "terser": "^5.5.0"
   },
   "scripts": {
     "math": "rollup --config utils/rollup.hurmet.config.js",
