Install service workers

--- a/package.json
+++ b/package.json
@@ -47,8 +47,9 @@
     "docs": "node utils/buildDocs.js",
     "pm": "rollup --config utils/rollup.prosemirror.config.js && node utils/editPM.js",
     "md": "rollup --config utils/rollup.markdown.config.js",
-    "minify": "terser preview/prosemirror.js -o site/prosemirror.min.js -m && terser preview/hurmet.js -o site/hurmet.min.js -m",
-    "build": "yarn pm && yarn math && yarn minify && yarn docs",
+    "demo": "rollup --config utils/rollup.demo.config.js",
+    "minify": "terser preview/prosemirror.js -o preview/prosemirror.min.js -m && terser preview/hurmet.js -o preview/hurmet.min.js -m",
+    "build": "yarn pm && yarn math && yarn demo && yarn minify && yarn docs",
     "test": "yarn test:lint && node test/test.js",
     "test:lint": "eslint src",
     "test:unit": "node test/test.js",
