--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,13 @@
 node_modules
 src/altParser.js
-preview/hurmet.js
-preview/prosemirror.js
+preview/prosemirror.mjs
+preview/demo.mjs
+preview/styles.min.css
+preview/katex/
+preview/temml/
+test/hurmet.cjs
 utils/ECB Exchange Rates.xml
+site/prosemirror.min.mjs
+site/docs/en/demo.min.mjs
+site/docs/en/manual.html
+site/server.js
