--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "terser": "^5.5.0"
   },
   "scripts": {
-    "math": "rollup --config utils/rollup.hurmet.config.js",
+    "math": "rollup --config utils/rollup.hurmet.config.js && rollup --config utils/rollup.demo.config.js",
     "rates": "node utils/updateExchangeRates.js",
     "docs": "node utils/buildDocs.js",
     "pm": "rollup --config utils/rollup.prosemirror.config.js && node utils/editPM.js",
