--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Rich text editor on the web, featuring live calculations.",
   "homepage": "https://hurmet.app",
   "license": "MIT",
+  "packageManager": "yarn@3.2.2",
   "private": true,
   "maintainers": [
     {
