--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "hurmet",
   "version": "2022.03.22",
   "description": "Rich text editor on the web, featuring live calculations.",
+  "type": "module",
   "homepage": "https://hurmet.app",
   "license": "MIT",
   "packageManager": "yarn@3.2.2",
@@ -49,7 +50,7 @@
     "pm": "rollup --config utils/rollup.prosemirror.config.js && node utils/editPM.js",
     "md": "rollup --config utils/rollup.markdown.config.js",
     "demo": "rollup --config utils/rollup.demo.config.js",
-    "minify": "terser preview/prosemirror.mjs -o site/prosemirror.min.mjs -m && terser preview/demo.mjs -o site/demo.min.mjs -m",
+    "minify": "terser preview/prosemirror.js -o site/prosemirror.min.js -m && terser preview/demo.js -o site/demo.min.js -m",
     "build": "yarn pm && yarn math && yarn demo && yarn minify && yarn docs",
     "test": "yarn test:lint && node test/test.js",
     "test:lint": "eslint src",
