--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "pm": "rollup --config utils/rollup.prosemirror.config.js && node utils/editPM.js",
     "md": "rollup --config utils/rollup.markdown.config.js",
     "demo": "rollup --config utils/rollup.demo.config.js",
-    "minify": "terser preview/prosemirror.js -o site/prosemirror.min.js -m && terser preview/demo.js -o site/demo.min.js -m",
+    "minify": "terser preview/prosemirror.js -o site/prosemirror.min.js -m && terser preview/hurmet.js -o site/hurmet.min.js -m",
     "build": "yarn pm && yarn math && yarn demo && yarn minify && yarn docs",
     "test": "yarn test:lint && node test/test.js",
     "test:lint": "eslint src",
