--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "pm_mjs": "rollup --config utils/rollup.prosemirror_mjs.config.js && node utils/editPM_mjs.js",
     "md": "rollup --config utils/rollup.markdown.config.js",
     "demo": "rollup --config utils/rollup.demo.config.js",
-    "minify": "terser preview/prosemirror.mjs -o preview/prosemirror.min.js -m && terser preview/demo.js -o preview/demo.min.js -m && terser preview/temml.js -o preview/temml.min.js -m && terser preview/katex.js -o preview/katex.min.js -m",
+    "minify": "terser preview/prosemirror.mjs -o site/prosemirror.min.js -m && terser preview/demo.js -o site/demo.min.js -m && terser preview/temml.js -o preview/site.min.js -m && terser preview/katex.js -o site/katex.min.js -m",
     "build": "yarn pm && yarn math && yarn demo && yarn minify && yarn docs",
     "test": "yarn test:lint && node test/test.js",
     "test:lint": "eslint src",
