Improve build for offline

--- a/package.json
+++ b/package.json
@@ -51,8 +51,9 @@
     "pm_mjs": "rollup --config utils/rollup.prosemirror_mjs.config.js && node utils/editPM_mjs.js",
     "md": "rollup --config utils/rollup.markdown.config.js",
     "demo": "rollup --config utils/rollup.demo.config.js",
-    "minify": "terser preview/prosemirror.mjs -o site/prosemirror.min.js -m && terser preview/demo.js -o site/demo.min.js -m && terser preview/temml.js -o preview/site.min.js -m && terser preview/katex.js -o site/katex.min.js -m",
-    "build": "yarn pm && yarn math && yarn demo && yarn minify && yarn docs",
+    "minify": "terser preview/prosemirror.mjs -o site/prosemirror.min.js -m && terser preview/demo.js -o site/demo.min.js -m",
+    "copyPM": "node utils/copyPM.js",
+    "build": "yarn pm_mjs && yarn demo && yarn minify && yarn docs && yarn copyPM",
     "test": "yarn test:lint && node test/test.js",
     "test:lint": "eslint src",
     "test:unit": "node test/test.js",
