Revise service worker

--- a/package.json
+++ b/package.json
@@ -52,8 +52,7 @@
     "md": "rollup --config utils/rollup.markdown.config.js",
     "demo": "rollup --config utils/rollup.demo.config.js",
     "minify": "terser preview/prosemirror.mjs -o site/prosemirror.min.js -m && terser preview/demo.js -o site/demo.min.js -m",
-    "copyPM": "node utils/copyPM.js",
-    "build": "yarn pm_mjs && yarn demo && yarn minify && yarn docs && yarn copyPM",
+    "build": "yarn pm_mjs && yarn demo && yarn minify && yarn docs",
     "test": "yarn test:lint && node test/test.js",
     "test:lint": "eslint src",
     "test:unit": "node test/test.js",
