Enable captions for images

--- a/package.json
+++ b/package.json
@@ -44,15 +44,13 @@
     "terser": "^5.14.2"
   },
   "scripts": {
-    "math": "rollup --config utils/rollup.hurmet.config.js && rollup --config utils/rollup.demo.config.js",
-    "rates": "node utils/updateExchangeRates.js",
-    "docs": "node utils/buildDocs.js",
+    "hurmet": "rollup --config utils/rollup.hurmet.config.js",
     "pm": "rollup --config utils/rollup.prosemirror.config.js && node utils/editPM.js",
-    "pm_mjs": "rollup --config utils/rollup.prosemirror_mjs.config.js && node utils/editPM_mjs.js",
-    "md": "rollup --config utils/rollup.markdown.config.js",
     "demo": "rollup --config utils/rollup.demo.config.js",
     "minify": "terser preview/prosemirror.mjs -o site/prosemirror.min.js -m && terser preview/demo.js -o site/demo.min.js -m",
-    "build": "yarn pm_mjs && yarn demo && yarn minify && yarn docs",
+    "build": "yarn hurmet && yarn demo && yarn pm && yarn minify && yarn docs",
+    "rates": "node utils/updateExchangeRates.js",
+    "docs": "node utils/buildDocs.js",
     "test": "yarn test:lint && node test/test.js",
     "test:lint": "eslint src",
     "test:unit": "node test/test.js",
