Revise build dependencies

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,14 @@
 .yarn
 node_modules
 src/altParser.js
-preview/prosemirror.mjs
-preview/demo.mjs
+preview/prosemirror.js
+preview/demo.js
 preview/styles.min.css
 preview/katex.min.css
-preview/fonts/
 preview/Temml.woff2
 preview/temml.min.css
-test/hurmet.cjs
+site/prosemirror.min.js
+site/demo.min.js
 utils/ECB Exchange Rates.xml
+utils/hurmet.js
 site/server.cjs
