--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   ],
   "dependencies": {
     "filesaver.js-npm": "1.0.1",
+    "node-fs": "^0.1.7",
     "prosemirror-commands": "^1.0.8",
     "prosemirror-dropcursor": "^1.3.2",
     "prosemirror-example-setup": "^1.0.1",
