--- a/package.json
+++ b/package.json
@@ -46,12 +46,12 @@
   },
   "scripts": {
     "hurmet": "rollup --config utils/rollup.hurmet.config.js",
-    "pm": "rollup --config utils/rollup.prosemirror.config.js && node utils/editPM.js",
+    "pm": "rollup --config utils/rollup.prosemirror.config.js && node utils/editPM.mjs",
     "demo": "rollup --config utils/rollup.demo.config.js",
     "minify": "terser preview/prosemirror.js -o site/prosemirror.min.js -m && terser preview/demo.js -o site/demo.min.js -m",
     "build": "yarn hurmet && yarn demo && yarn pm && yarn minify && yarn docs",
     "rates": "node utils/updateExchangeRates.js",
-    "docs": "node utils/buildDocs.js",
+    "docs": "node utils/buildDocs.mjs",
     "test": "yarn test:lint && node test/test.js",
     "test:lint": "eslint src",
     "test:unit": "node test/test.js",
