--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
   ],
   "dependencies": {
     "filesaver.js-npm": "1.0.1",
-    "node-fs": "^0.1.7",
     "prosemirror-commands": "^1.0.8",
     "prosemirror-dropcursor": "^1.3.2",
     "prosemirror-example-setup": "^1.0.1",
@@ -52,9 +51,8 @@
     "build": "yarn hurmet && yarn demo && yarn pm && yarn minify && yarn docs",
     "rates": "node utils/updateExchangeRates.js",
     "docs": "node utils/buildDocs.cjs",
-    "test": "yarn test:lint && node test/test.js",
+    "test": "yarn test:lint && node test/test.cjs",
     "test:lint": "eslint src",
-    "test:unit": "node test/test.js",
-    "test:hmd": "node utils/testHmd.js"
+    "test:unit": "node test/test.cjs"
   }
 }
