--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "pm": "rollup --config utils/rollup.prosemirror.config.js && node utils/editPM.cjs",
     "demo": "rollup --config utils/rollup.demo.config.js",
     "minify": "terser preview/prosemirror.js -o site/prosemirror.min.js -m && terser preview/demo.js -o site/demo.min.js -m",
+    "copypm": "node utils/copyPM.cjs",
     "build": "yarn hurmet && yarn demo && yarn pm && yarn minify && yarn docs",
     "rates": "node utils/updateExchangeRates.cjs",
     "docs": "node utils/buildDocs.cjs",
