--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "prosemirror-history": "^1.0.4",
     "prosemirror-inputrules": "^1.1.2",
     "prosemirror-keymap": "^1.1.3",
-    "prosemirror-menu": "^1.0.5",
+    "prosemirror-menu": "1.0.5",
     "prosemirror-model": "^1.9.1",
     "prosemirror-state": "^1.3.2",
     "prosemirror-tables": "^1.0.0",
