--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@ preview/prosemirror.js
 preview/demo.js
 preview/styles.min.css
 preview/Temml.woff2
+site/prosemirror.min.js
+site/demo.min.js
 utils/ECB Exchange Rates.xml
 utils/hurmet.cjs
 site/server.cjs
