--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "packageManager": "yarn@3.2.2",
   "private": true,
+  "type": "module",
   "maintainers": [
     {
       "name": "Ron Kok",
@@ -36,10 +37,10 @@
     "prosemirror-view": "^1.17.2"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^25.0.4",
+    "@rollup/plugin-node-resolve": "^15.2.1",
     "eslint": "^7.26.0",
-    "rollup": "^1.13.0",
-    "rollup-plugin-commonjs": "^10.0.0",
-    "rollup-plugin-node-resolve": "^5.0.1",
+    "rollup": "^3.29.1",
     "terser": "^5.14.2"
   },
   "scripts": {
