--- a/package.json
+++ b/package.json
@@ -25,26 +25,25 @@
   ],
   "dependencies": {
     "filesaver.js-npm": "1.0.1",
-    "prosemirror-commands": "^1.0.8",
-    "prosemirror-dropcursor": "^1.3.2",
-    "prosemirror-example-setup": "^1.0.1",
-    "prosemirror-gapcursor": "^1.1.3",
-    "prosemirror-history": "^1.0.4",
-    "prosemirror-inputrules": "^1.1.2",
-    "prosemirror-keymap": "^1.1.3",
-    "prosemirror-menu": "1.0.5",
-    "prosemirror-model": "^1.9.1",
-    "prosemirror-state": "^1.3.2",
-    "prosemirror-tables": "^1.0.0",
-    "prosemirror-transform": "^1.2.3",
-    "prosemirror-view": "^1.17.2"
+    "prosemirror-commands": "^1.5.2",
+    "prosemirror-dropcursor": "^1.8.1",
+    "prosemirror-gapcursor": "^1.3.2",
+    "prosemirror-history": "^1.3.2",
+    "prosemirror-inputrules": "^1.4.0",
+    "prosemirror-keymap": "^1.2.2",
+    "prosemirror-menu": "^1.2.4",
+    "prosemirror-model": "^1.19.4",
+    "prosemirror-state": "^1.4.3",
+    "prosemirror-tables": "^1.3.5",
+    "prosemirror-transform": "^1.8.0",
+    "prosemirror-view": "^1.33.1"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^25.0.4",
-    "@rollup/plugin-node-resolve": "^15.2.1",
+    "@rollup/plugin-commonjs": "^25.0.7",
+    "@rollup/plugin-node-resolve": "^15.2.3",
     "eslint": "^7.26.0",
-    "rollup": "^3.29.1",
-    "terser": "^5.14.2"
+    "rollup": "^4.12.0",
+    "terser": "^5.27.1"
   },
   "scripts": {
     "hurmet": "rollup --config utils/rollup.hurmet.config.js",
