--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hurmet",
-  "version": "2024.01.28",
+  "version": "2024.08.14",
   "description": "Rich text editor on the web, featuring live calculations.",
   "homepage": "https://hurmet.org",
   "license": "MIT",
@@ -25,25 +25,28 @@
   ],
   "dependencies": {
     "filesaver.js-npm": "1.0.1",
-    "prosemirror-commands": "^1.5.2",
+    "prosemirror-commands": "^1.6.0",
     "prosemirror-dropcursor": "^1.8.1",
     "prosemirror-gapcursor": "^1.3.2",
-    "prosemirror-history": "^1.3.2",
+    "prosemirror-history": "^1.4.1",
     "prosemirror-inputrules": "^1.4.0",
     "prosemirror-keymap": "^1.2.2",
     "prosemirror-menu": "^1.2.4",
-    "prosemirror-model": "^1.19.4",
+    "prosemirror-model": "^1.22.3",
     "prosemirror-state": "^1.4.3",
-    "prosemirror-tables": "^1.3.5",
-    "prosemirror-transform": "^1.8.0",
-    "prosemirror-view": "^1.33.1"
+    "prosemirror-tables": "^1.4.0",
+    "prosemirror-transform": "^1.10.0",
+    "prosemirror-view": "^1.33.10"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^25.0.7",
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.9.0",
+    "@rollup/plugin-commonjs": "^26.0.1",
     "@rollup/plugin-node-resolve": "^15.2.3",
-    "eslint": "^7.26.0",
-    "rollup": "^4.12.0",
-    "terser": "^5.27.1"
+    "eslint": "latest",
+    "globals": "^15.9.0",
+    "rollup": "^4.20.0",
+    "terser": "^5.31.6"
   },
   "scripts": {
     "hurmet": "rollup --config utils/rollup.hurmet.config.js",
