--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hurmet",
-  "version": "2025.05.28",
+  "version": "2025.12.02",
   "description": "Rich text editor on the web, featuring live calculations.",
   "homepage": "https://hurmet.org",
   "license": "MIT",
@@ -24,19 +24,19 @@
     "src/"
   ],
   "dependencies": {
-    "filesaver.js-npm": "1.0.1",
-    "prosemirror-commands": "^1.6.0",
-    "prosemirror-dropcursor": "^1.8.1",
-    "prosemirror-gapcursor": "^1.3.2",
-    "prosemirror-history": "^1.4.1",
-    "prosemirror-inputrules": "^1.4.0",
-    "prosemirror-keymap": "^1.2.2",
-    "prosemirror-menu": "^1.2.4",
-    "prosemirror-model": "^1.22.3",
-    "prosemirror-state": "^1.4.3",
-    "prosemirror-tables": "^1.4.0",
-    "prosemirror-transform": "^1.10.0",
-    "prosemirror-view": "^1.33.10",
+    "filesaver.js-npm": "^1.0.1",
+    "prosemirror-commands": "^1.7.1",
+    "prosemirror-dropcursor": "^1.8.2",
+    "prosemirror-gapcursor": "^1.4.0",
+    "prosemirror-history": "^1.5.0",
+    "prosemirror-inputrules": "^1.5.1",
+    "prosemirror-keymap": "^1.2.3",
+    "prosemirror-menu": "^1.2.5",
+    "prosemirror-model": "^1.25.4",
+    "prosemirror-state": "^1.4.4",
+    "prosemirror-tables": "^1.8.1",
+    "prosemirror-transform": "^1.10.5",
+    "prosemirror-view": "^1.41.4",
     "ws": "^8.18.3"
   },
   "devDependencies": {
@@ -44,10 +44,10 @@
     "@eslint/js": "^9.9.0",
     "@rollup/plugin-commonjs": "^26.0.1",
     "@rollup/plugin-node-resolve": "^15.2.3",
-    "eslint": "latest",
-    "globals": "^15.9.0",
-    "rollup": "^4.22.4",
-    "terser": "^5.31.6"
+    "eslint": "^9.39.1",
+    "globals": "^16.5.0",
+    "rollup": "^4.53.3",
+    "terser": "^5.44.1"
   },
   "scripts": {
     "hurmet": "rollup --config utils/rollup.hurmet.config.js",
